alerts changed to reusable alert modal popup that's rendered to the DOM

--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
            </li> -->
     </ul>
 
-    <button id="workouts__modify--delete-all" class="workouts__modify--delete-all hidden"><span>Delete Workouts</span>
-    </button>
+    <button id="workouts__modify--delete-all" class="workouts__modify--delete-all hidden"><span>Delete Workouts</span></button>
 
     <form id="modal__edit--workout-form" class="modal__edit--workout-form hidden">
         <div class="modal__edit--workout-header-container">
@@ -167,13 +166,15 @@
     </form>
 </div>
 
-<!-- Alert modal for not getting location -->
-<div id="alert__modal" class="alert__modal">
-    <div class="alert__modal--body">
-        <div class="alert__modal--label">Could not get your location!</div>
-        <div id="alert__modal--close-btn">X</div>
-    </div>
-</div>
+<!-- Alert modal rendered here -->
+<!--<div id="alert__modal" class="alert__modal">-->
+<!--    <div class="alert__modal&#45;&#45;body">-->
+<!--        <div class="alert__modal&#45;&#45;label">${text}</div>-->
+<!--        <div id="alert__modal&#45;&#45;close-btn">X</div>-->
+<!--    </div>-->
+<!--</div>-->
+
+<!-- Alert modal overlay -->
 <div id="alert__modal--overlay" class="alert__modal--overlay"></div>
 
 <!-- The HTML element that serves as the map container -->
