refactored alert modal to have the inner text change depending on the specific alert instance. added another to do

--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
     </form>
 </div>
 
-<!-- Alert modal rendered here -->
-<!--<div id="alert__modal" class="alert__modal">-->
-<!--    <div class="alert__modal&#45;&#45;body">-->
-<!--        <div class="alert__modal&#45;&#45;label">${text}</div>-->
-<!--        <div id="alert__modal&#45;&#45;close-btn">X</div>-->
-<!--    </div>-->
-<!--</div>-->
+<!-- Alert modal -->
+<div id="alert__modal" class="alert__modal">
+    <div class="alert__modal--body">
+        <div id="alert__modal--body-text" class="alert__modal--body-text"></div>
+        <div id="alert__modal--close-btn">X</div>
+    </div>
+</div>
 
 <!-- Alert modal overlay -->
 <div id="alert__modal--overlay" class="alert__modal--overlay"></div>
