began converting confirm alert messages to a modal

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </form>
 </div>
 
-<!-- Alert modal -->
+<!-- Alert modal for various alerts -->
 <div id="alert__modal" class="alert__modal">
     <div class="alert__modal--body">
         <div id="alert__modal--body-text" class="alert__modal--body-text"></div>
@@ -174,12 +174,20 @@
     </div>
 </div>
 
+<!-- Confirm delete modal for deleting individual & all workouts -->
+<div id="confirm__delete-modal" class="confirm__delete--modal">
+    <div class="confirm__delete--modal-body">
+        <div id="confirm__delete--modal-body-text" class="confirm__delete--modal-body-text"></div>
+        <div id="confirm__delete--modal-close-btn">X</div>
+    </div>
+</div>
+
 <!-- Alert modal overlay -->
-<div id="alert__modal--overlay" class="alert__modal--overlay"></div>
+<div id="modal__overlay" class="modal__overlay"></div>
 
 <!-- The HTML element that serves as the map container -->
 <div id="map" class="map">
-    <button id="position__map-to-view-all-markers">View All Markers</button>
+    <button id="position__map--to-view-all-markers">View All Markers</button>
 </div>
 
 <!-- Leaflet Map CDN JS -->
