--- a/index.html
+++ b/index.html
@@ -177,8 +177,11 @@
 <!-- Confirm delete modal for deleting individual & all workouts -->
 <div id="confirm__delete-modal" class="confirm__delete--modal">
     <div class="confirm__delete--modal-body">
-        <div id="confirm__delete--modal-body-text" class="confirm__delete--modal-body-text"></div>
-        <div id="confirm__delete--modal-close-btn">X</div>
+        <div id="confirm__delete--modal-body-text" class="confirm__delete--modal-body-text">Are you sure you want to delete this workout?</div>
+    </div>
+    <div class="confirm__delete--modal-buttons-container">
+        <button id="confirm__delete--modal-yes-btn" value="yes">Yes</button>
+        <button id="confirm__delete--modal-no-btn" value="no">No</button>
     </div>
 </div>
 
@@ -189,6 +192,9 @@
 <div id="map" class="map">
     <button id="position__map--to-view-all-markers">View All Markers</button>
 </div>
+
+<!-- Sweet Alert JS for Customizable Alerts -->
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 <!-- Leaflet Map CDN JS -->
 <script defer src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
