App is ready for testing to determine if there are any bugs

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <div id="sidebar" class="sidebar">
-    <img src="./assets/map.png" alt="Logo" class="logo"/>
+    <img src="./assets/map-fitness.png" alt="Logo" class="logo"/>
 
     <div id="workouts__header--none-listed" class="workouts__header--none-listed hidden">Double click a location on the
         map to log where you worked out!
@@ -192,9 +192,6 @@
 <div id="map" class="map">
     <button id="position__map--to-view-all-markers">View All Markers</button>
 </div>
-
-<!-- Sweet Alert JS for Customizable Alerts -->
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 <!-- Leaflet Map CDN JS -->
 <script defer src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
