updated file structure

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <link rel="shortcut icon" type="image/png" href="../assets/icon.png"/>
+    <link rel="shortcut icon" type="image/png" href="./assets/icon.png"/>
     <!-- Google Fonts API -->
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet"/>
 
@@ -25,7 +25,7 @@
 </head>
 <body>
 <div id="sidebar" class="sidebar">
-    <img src="../assets/map-fitness.png" alt="Logo" class="logo"/>
+    <img src="./assets/map-fitness.png" alt="Logo" class="logo"/>
 
     <div id="workouts__header--none-listed" class="workouts__header--none-listed hidden">Double click a location on the
         map to log where you worked out!
