--- a/public/index.html
+++ b/public/index.html
@@ -210,6 +210,9 @@
 <!-- API Key -->
 <script defer type="text/javascript" src="./config.js"></script>
 
+<!-- DOMPurify to sanitize user input -->
+<script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.6/dist/purify.min.js"></script>
+
 <!-- Custom JS File -->
 <script defer src="./main.js"></script>
 </body>
