updated CSP settings

--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
 <script defer type="text/javascript" src="./config.js"></script>
 
 <!-- DOMPurify to sanitize user input -->
-<script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.6/dist/purify.min.js"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/dompurify@3.1.6/dist/purify.min.js"></script>
 
 <!-- Custom JS File -->
 <script defer src="./main.js"></script>
